--- a/touch_button/.vscode/settings.json
+++ b/touch_button/.vscode/settings.json
@@ -5,5 +5,6 @@
   "files.associations": {
     "task.h": "c"
   },
-  "C_Cpp.errorSquiggles": "enabled"
+  "C_Cpp.errorSquiggles": "enabled",
+  "idf.flashType": "UART"
 }
