End of Day 9/25/2024 Service and Characteristic Callbacks

--- a/Gatt_client/gatt_client/.vscode/settings.json
+++ b/Gatt_client/gatt_client/.vscode/settings.json
@@ -9,6 +9,7 @@
     "ble_hs.h": "c",
     "cstdint": "c",
     "*.inc": "c",
-    "esp_bt.h": "c"
+    "esp_bt.h": "c",
+    "esp_log.h": "c"
   }
 }
