CBB Testing Creation for implementation of HeaderFile Optimization.

--- a/Gatt_client/gatt_client/main/CMakeLists.txt
+++ b/Gatt_client/gatt_client/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "gattc_demo.c"
+idf_component_register(SRCS "morse_functions.c" "gattc_demo.c"
                     INCLUDE_DIRS ".")
