End of Day 10/13/2024 Headers, Error Status 14

--- a/Gatt_client/gatt_client/.vscode/settings.json
+++ b/Gatt_client/gatt_client/.vscode/settings.json
@@ -20,6 +20,7 @@
     "istream": "c",
     "ostream": "c",
     "regex": "c",
-    "array": "c"
+    "array": "c",
+    "morse_functions.h": "c"
   }
 }
