--- a/Gatt_client/gatt_client/main/CMakeLists.txt
+++ b/Gatt_client/gatt_client/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "poll_event_task_functions.c" "morse_functions.c" "morse_client.c" "morse_common.c" "callback_functions.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "morse_client.c" "morse_src/morse_common.c" "morse_src/callback_functions.c" "morse_src/morse_functions.c" "morse_src/poll_event_task_functions.c"
+                    INCLUDE_DIRS "." "morse_src")
